--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@faker-js/faker": "^8.4.1",
     "dexie": "^3.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
