--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "dexie": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
