--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@tanstack/react-query": "^5.20.1",
     "@uidotdev/usehooks": "^2.4.1",
     "dexie": "^3.2.5",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.20.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
